--- a/app.yaml
+++ b/app.yaml
@@ -9,9 +9,15 @@ handlers:
   static_files: favicon.ico
   upload: favicon\.ico
 
-- url: .*
-  script: main.app
+- url: /index
+  script: main.appIndex
+
+- url: /add
+  script: main.appAdd
+
 
 libraries:
 - name: webapp2
-  version: "2.5.2"
+  version: latest
+- name: jinja2
+  version: latest
